refactor node
